# NOPE

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  FEATURE_STATUS.md  IMPLEMENTATION_WORKLOG.md  LOCAL_AI.md  README.md  SECURITY_MODEL.md  docker-compose.ai-cpu.yml  docker-compose.ai-gpu.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/migrations/: 0001_initial.sql  0002_report_bodies.sql  0003_scan_events.sql  0004_finding_lifecycle.sql  0005_ai_actions.sql  0006_rules_v2_normalized.sql
apps/api/nope_api/: ai.py  artifacts.py  attack_surface.py  auth.py  benchmarks.py  config.py  db.py  drift.py  finding_validation.py  findings.py  github.py  ingestion.py  lifecycle.py  main.py  models.py  queue.py  rag.py  reports.py  rules_engine.py  rules_v2.py  runner.py  sandbox.py  scan_engine.py  scanners.py  scoring.py  security.py  settings_contracts.py  stack_detector.py  storage.py  url_scanner.py
apps/api/tests/: test_api_auth.py  test_finding_validation.py  test_persistence.py  test_phase10_sandbox.py  test_phase11_settings_github.py  test_phase12_benchmarks.py  test_phase13_expansion.py  test_phase14_pipeline.py  test_phase4_findings.py  test_phase5_qwen.py  test_phase6_rag.py  test_phase7_findings.py  test_phase8_drift.py  test_phase9_pdf_reports.py  test_pipeline.py  test_queue.py  test_scan_engine_concurrency.py  test_scanners.py  (+9 more)
(+171 files in other folders)
